logs/metamake.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/metamake'...
Compiling './lib/python3.5/site-packages/metamake/__init__.py'...
***   File "./lib/python3.5/site-packages/metamake/__init__.py", line 88
    print "(no tasks defined)"
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/metamake/_bootstrap.py'...
***   File "./lib/python3.5/site-packages/metamake/_bootstrap.py", line 62
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/metamake/_path.py'...
***   File "./lib/python3.5/site-packages/metamake/_path.py", line 892
    def mkdir(self, mode=0777):
                            ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/metamake/_shell.py'...
***   File "./lib/python3.5/site-packages/metamake/_shell.py", line 44
    print stdout.strip()
               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/metamake-1.1.7.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
